<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".ui.WelcomeActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input_data"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_name_goal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:shapeAppearance="?attr/shapeAppearanceCornerLarge"
        android:hint="@string/name_goal"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:errorEnabled="true"
        app:errorTextColor="?attr/colorError"
        app:boxStrokeErrorColor="?attr/colorError"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_intro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tied_name_goal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_name_from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:shapeAppearance="?attr/shapeAppearanceCornerLarge"
        android:hint="@string/name_from"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:errorEnabled="true"
        app:errorTextColor="?attr/colorError"
        app:boxStrokeErrorColor="?attr/colorError"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/til_name_goal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tied_name_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_greeting"
        android:layout_width="match_parent"
        android:layout_height="232dp"
        app:shapeAppearance="?attr/shapeAppearanceCornerLarge"
        android:hint="@string/greeting"
        app:counterEnabled="true"
        app:counterMaxLength="250"
        app:errorEnabled="true"
        app:errorTextColor="?attr/colorError"
        app:boxStrokeErrorColor="?attr/colorError"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/til_name_from"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tied_greeting"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="top|start"
            android:inputType="textMultiLine|textNoSuggestions"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_create"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/create_birthday_card"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/til_greeting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>