<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
    android:fitsSystemWindows="true">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fcv_birthday"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/ib_blue" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ib_blue"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:backgroundTint="@color/blue"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
        android:layout_marginBottom="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ib_pink"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/background_blue" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ib_pink"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:backgroundTint="@color/pink"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
        app:layout_constraintStart_toEndOf="@+id/ib_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/ib_blue"
        android:contentDescription="@string/background_pink" />

    <TextView
        android:id="@+id/tv_select_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_background"
        android:fontFamily="sans-serif-black"
        android:textSize="26sp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/ib_blue" />

</androidx.constraintlayout.widget.ConstraintLayout>