<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PinkFragment">

    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/birthdaypink" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/happy_birthday"
        android:textSize="32sp"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/purple_text"
        android:textAlignment="viewStart"
        android:layout_marginTop="80dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_name_goal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:fontFamily="sans-serif-medium"
        android:textAlignment="viewStart"
        android:layout_marginTop="8dp"
        android:textColor="@color/purple_text"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_birthday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Rahmad Noor Ikhsan"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_greeting"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textSize="26sp"
        android:gravity="center"
        android:fontFamily="sans-serif-thin"
        android:textFontWeight="@integer/material_motion_duration_long_2"
        android:textColor="@color/purple_text"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_goal"
        app:layout_constraintBottom_toTopOf="@+id/tv_from"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Selamat Ulang Tahun, Semoga Panjang Umur, dapet Ferrari tahun ini, dan semoga yang di semogakan tersemogakan, Aamiin"
        tools:targetApi="p" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:text="@string/from"
        android:textColor="@color/purple_text"
        android:textSize="20sp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_name_from"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="From," />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_name_from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/purple_text"
        android:layout_marginBottom="80dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Muhammad Alaydrus" />

</androidx.constraintlayout.widget.ConstraintLayout>